--- a/_posts/2019-06-30-the-us-narrative-today.html
+++ b/_posts/2019-06-30-the-us-narrative-today.html
@@ -2506,107 +2506,107 @@ stories:
   domain: http://www.montevistajournal.com/
   link: https://www.montevistajournal.com/article/cemetery-board-discusses-record-access
 images:
-- name: dc-statue-dcstatue-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-monet-one.jpg
-- name: blossombar-blue-brush-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blue-brush-file-00-00-50-62.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-sand-paper.jpg
-- name: udnie-IMG_6333.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_6333.jpg
-- name: aws-s3-stories-new-desert-dragon-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-desert-dragon-horiz-circuit.jpg
-- name: containership-containership-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-smooth-ride.jpg
-- name: miamibeach-miamibeach-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-neo-instinct.jpg
-- name: legal-statue-legalstatue-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-graham-sutherland.jpg
-- name: losangelescloudyday-los-angeles-downtown-close-up.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/losangelescloudyday-los-angeles-downtown-close-up.jpg
-- name: locked-up-steam-lock-up-steam-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-attack-planes.jpg
-- name: aws-s3-stories-statue-face-open-mouth-colorful-blocks.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-colorful-blocks.png
-- name: oldroad-old-road-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-alien-goggles.jpg
-- name: christianity-christianity-under-construction-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-atari-missle.jpg
-- name: art-museum-art-museum-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-wols.jpg
-- name: aws-s3-bluelake-bluelake-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-bluelake-bluelake-still-1200.jpg
-- name: blossombar-rainbow-festival-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-rainbow-festival-file-00-00-50-62.jpg
-- name: power-lines-power-lines-empty-space-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-smoking-cigarette.jpg
-- name: rockingchair-rockingchair-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-oily-mcoilface.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-crafty-painting.jpg
-- name: amusement-park-amusement-park-2-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-circuit-4.jpg
-- name: supreme-court-supremecourt-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-really-hot.jpg
-- name: school-clouds-church-clouds-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-gan-vogh.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-plentiful.jpg
-- name: old-gas-pumps-oldgaspumps-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-blue-granite.jpg
-- name: downtown-trucksilo-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-internet-numbers.jpg
-- name: crow-crow-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-atari-asteroids.jpg
-- name: abe-lincoln-one-sunday-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sunday-file-00-00-15-87.jpg
-- name: dragon-desert-desert-dragon-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-bright-sand.jpg
-- name: server-cloud-server-racks-clouds-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-attack-planes.jpg
-- name: ellis-island-ellisisland-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-atari-asteroids.jpg
-- name: old-gas-pumps-oldgaspumps-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-oily-mcoilface.jpg
-- name: crow_smoking_cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_smoking_cigarette.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-umberto-bocc.jpg
-- name: gypsy-wagon-gypsywagon-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-constitution.jpg
-- name: statue-of-liberty-front-view-statueofliberty-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-circuit-5.jpg
-- name: blossombar-crafty-painting-file-00-00-50-18.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-18.jpg
-- name: mosaic-face-mosaic-face-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-copper-circuit.jpg
-- name: aws-s3-stories-new-49-127-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-49-127-800-500-0-max-0-1--1.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-spagetti-accident.jpg
-- name: flower-barbed-wire-flower-barbed-wire-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-brush.jpg
-- name: oldtrain-oldtrain-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-post-modern.jpg
-- name: yosemite-yosemite-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-ww2-color.jpg
-- name: old-church-oldchurch-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-colorful-blocks.jpg
-- name: razorcliff-razorcliff-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dark-soul.jpg
-- name: eduardo-eduardo.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo.jpg
-- name: stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
-- name: san-francisco-street-view-san-francisco-street-view-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-ww2-color.jpg
-- name: stories-yellow-tree-in-the-rocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-yellow-tree-in-the-rocks.jpg
-- name: stories-36575484422-087495fca9-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36575484422-087495fca9-z.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-blue-electricity.jpg
-- name: status-berlin-status-berlin-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-nazi-poster.jpg
+- name: server-cloud-server-racks-clouds-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dali-two.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-neo-instinct.jpg
+- name: abandonedbuildings_purple_pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_purple_pond.jpg
+- name: crow-crow-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-purple-storm.jpg
+- name: aws-s3-stories-soldier-computer-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-soldier-computer-dark-dali.jpg
+- name: server-cloud-server-racks-clouds-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-copper-circuit.jpg
+- name: store-on-corner-oldcabin-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-yellow-paper.jpg
+- name: containership-containership-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-constitution.jpg
+- name: border-fence-border-fence-on-hill-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-smoking-cigarette.jpg
+- name: yosemite-yosemite-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-crafty-painting.jpg
+- name: border-crossing-bordercrossing-creativity.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-creativity.png
+- name: status-berlin-status-berlin-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-deep-connections.jpg
+- name: castle-wall-DSC-0067-copper-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-copper-circuit.JPG
+- name: mosaic-face-mosaic-face-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dark-dali.jpg
+- name: castle-wall-DSC-0067-diego-rivera1.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-diego-rivera1.JPG
+- name: rockingchair-rockingchair-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-blue-granite.jpg
+- name: birdhouse-birdhouse-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-nazi-poster.jpg
+- name: windowmountain-window-mountain-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dry-skin.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-atari-asteroids.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-atari-asteroids.JPG
+- name: mosaic-face-mosaic-face-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-hot-spicy.jpg
+- name: aws-s3-square-yuma-downtown-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-yuma-downtown-square.jpg
+- name: oldcabin-oldcabin-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-gred-mash.jpg
+- name: aws-s3-square-66-189-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-66-189-800-500-0-max-0--1--1.jpg
+- name: gypsy-wagon-gypsywagon-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-umberto-bocc.jpg
+- name: blossombar-neo-instinct-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-neo-instinct-file-00-00-24-99.jpg
+- name: flower-barbed-wire-flower-barbed-wire-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-crunch-paper.jpg
+- name: meadowbutterfly-meadow-butterfly-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-spagetti-accident.jpg
+- name: old-house-oldhouse-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-granite.jpg
+- name: mediterranean-mediterranean-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-hot-spicy.jpg
+- name: supreme-court-supremecourt-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-smooth-ride.jpg
+- name: store-on-corner-store-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-colorful-blocks.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-yellow-collage.jpg
+- name: ellis-island-ellisisland-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-ww2-dresden.jpg
+- name: oldcabin-store-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-matrix.jpg
+- name: oldhouse-granaryfield-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-crabapple.jpg
+- name: locked-up-steam-lock-up-steam-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dali-three.jpg
+- name: eduardo-eduardo-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-green-zuma.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-mucha-mult.jpg
+- name: powerlines-power-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-far-away.jpg
+- name: stories-beach-rocks-currents-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-beach-rocks-currents-blue-circuit-4.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-sand-paper.jpg
+- name: fence-fence-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-hot-spicy.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-green-zuma.jpg
+- name: white-house-lawn-white-house-lawn.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn.jpg
+- name: berlinwall2-berlinwall-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-emily-carr.jpg
+- name: store-on-corner-oldcabin-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-alien-goggles.jpg
+- name: christianity-christianity-under-construction-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-sand-paper.jpg
+- name: aws-s3-bluelake-bluelake-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-bluelake-bluelake-still.jpg
+- name: crow-crow-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-internet-numbers.jpg
+- name: windowmountain-window-mountain-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-crabapple.jpg
+- name: oldroad-old-road-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-rainbow-festival.jpg
 ---
 Rescue Ship Captain Held In Italy Attracts Donors, Defenders.&nbsp;Grupo Vital Engages The Crowd.&nbsp;McAllen Counselor Appointed To State Council By Governor.&nbsp;Providence Diocese To Name Clergy Accused Of Abusing Minors.&nbsp;Help Support Logger Days.&nbsp;Angels End Homestand With unacceptable Third Straight Loss To Oakland As.&nbsp;Fauquier Community Band.&nbsp;Bluffton Football Building Muscle, Success.&nbsp;
